--- a/style/hackstyle.css
+++ b/style/hackstyle.css
@@ -1,20 +1,27 @@
-/*.popup .overlay {
+/*<<<HACK-1>>>*/
+
+.hackbanner .overlay {
   position:fixed;
   top:0px;
   left:0px;
   width:100vw;
   height:100vh;
-  background:rgba(0,0,0,0.7);
   z-index:1;
   display:none;
 }
  
-.popup .content {
+.hackbanner .content {
   position:absolute;
   top:50%;
   left:50%;
   transform:translate(-50%,-50%) scale(0);
-  background:#fff;
+  background:darkmagenta;
+  color: whitesmoke;
+  border: 10px;
+  border-color: blue;
+  border-radius: 60px;
+  border-style: groove;
+  padding: 30px;
   width:500px;
   height:250px;
   z-index:2;
@@ -24,7 +31,7 @@
   font-family:"Open Sans",sans-serif;
 }
  
-.popup .close-btn {
+.hackbanner .close-btn {
   cursor:pointer;
   position:absolute;
   right:20px;
@@ -37,22 +44,103 @@
   font-weight:600;
   line-height:30px;
   text-align:center;
-  border-radius:50%;
+  border-radius:50%;;
 }
  
-.popup.active .overlay {
+.hackbanner.active .overlay {
   display:block;
 }
  
-.popup.active .content {
+.hackbanner.active .content {
   transition:all 300ms ease-in-out;
   transform:translate(-50%,-50%) scale(1);
 }
- 
-button {
+
+/*<<<HACK-2>>>*/
+
+.hackbanner2 .content {
   position:absolute;
   top:50%;
-  left:50%;
+  left:75%;
+  transform:translate(-50%,-50%) scale(0);
+  background:darkmagenta;
+ 
+  border: 10px;
+  border-color: blue;
+  border-radius: 60px;
+  border-style: groove;
+  width:250px;
+  height:500px;
+  z-index:2;
+  padding:20px;
+  box-sizing:border-box;
+  font-family:"Open Sans",sans-serif;
+}
+ 
+.hackbanner2 .close-btn {
+  cursor:pointer;
+  position:absolute;
+  right:20px;
+  top:20px;
+  width:30px;
+  height:30px;
+  background:rgb(4, 33, 200);
+  color:#fff;
+  font-size:25px;
+  font-weight:600;
+  line-height:30px;
+  text-align:center;
+  border-radius:50%;;
+}
+ 
+.hackbanner2.active .overlay {
+  display:block;
+}
+ 
+.hackbanner2.active .content {
+  transition:all 300ms ease-in-out;
+  transform:translate(-50%,-50%) scale(1);
+}
+
+
+.hackbanner2 .overlay {
+  position:fixed;
+  top:0px;
+  left:0px;
+  width:100vw;
+  height:100vh;
+  z-index:1;
+  display:none;
+}
+
+
+/*<<<EGYÉBB>>>*/
+
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+button {
+  position:absolute;
+  top:5%;
+  left:5%;
   transform:translate(-50%,-50%);
   padding:15px;
   font-size:18px;
@@ -61,49 +149,40 @@ button {
   text-transform:uppercase;
   font-weight:600;
   background:#fff;
-
-
-
-  <div class="popup" id="popup-1">
-    <div class="overlay"></div>
-    <div class="content">
-      <div class="close-btn" onclick="togglePopup()">&times;</div>
-      <h1>Title</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo aspernatur laborum rem sed laudantium excepturi veritatis voluptatum architecto, dolore quaerat totam officiis nisi animi accusantium alias inventore nulla atque debitis.</p>
-    </div>
-  </div>
-}*/
-
-.hackbanner{
-  background-color: darkmagenta;
-  border-color: blue;
-  border-style: groove;
-  padding: 30px;
-  color: whitesmoke;
-  width:500px;
-  height:250px;
 }
 
-.hackponit{
-  background-color: rgb(128, 17, 17);
-  border-color: orangered;
-  border-style: dashed;
-  padding: 15px;
-  color: whitesmoke;
-  border-radius: 50px;
-  width:150px;
-  height:150px;
+
+
+#btnstart{
+  padding:15px;
+  font-size:18px;
+  border:2px solid #222;
+  color:whitesmoke;
+  text-transform:uppercase;
+  font-weight:600;
+  background:green;
 }
 
-#lodbar{
+#hacklodbar2{
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 60px;
   background-color: fuchsia;
   color: whitesmoke;
-  padding: 15;
-  border-radius: 50px;
-  width:145px;
-  height:145px;
-
   text-align: center;
+  height: 480px;
   text-underline-position: initial;
-  background-image: url("pics/deathdata.jpg");
+}
+
+body{
+  background-color: rgb(56, 55, 55);
+}
+
+/*>>>GAME<<<*/
+
+.led{
+  padding: 15px;
+  margin-left: 5px;
+  background-color: rgb(243, 73, 235);
 }
